Applied structure fix / update